--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     "npm": ">= 5.6.0"
   },
   "dependencies": {
+    "bignumber.js": "^8.1.1",
     "bn.js": "^4.11.8",
     "compare-versions": "^3.4.0",
+    "mathjs": "^5.8.0",
     "moment": "^2.22.2",
     "node-fetch": "^2.3.0",
     "rlp": "^2.1.0",
     "sha3": "^2.0.0",
+    "truffle": "^5.0.10",
+    "truffle-assertions": "^0.8.0",
     "truffle-flattener": "^1.2.10",
     "truffle-hdwallet-provider": "^1.0.0-web3one.0",
     "web3": "^1.0.0-beta.36",
